message GasData{

    // 设备ID
    required int32 id = 1;

    // 压力
    required double pressure = 2;

    // 温度
    required double temper = 3;

    // 标况流量
    required double sFlow = 4;

    // 工作流量
    required double wFlow = 5;

    // 总流量
    required double aFlow = 6;

    //日期
    required int64 time=7;
}

message GasDataBox{
    repeated GasData gasData=1;
}